--- a/admin/css/eff-theme.css
+++ b/admin/css/eff-theme.css
@@ -21,7 +21,7 @@
 	font-weight: 400;
 	font-style:  normal;
 	font-display: swap;
-	src: url('../../../assets/fonts/Inter-Regular.woff2') format('woff2');
+	src: url('../../assets/fonts/Inter-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -29,7 +29,7 @@
 	font-weight: 500;
 	font-style:  normal;
 	font-display: swap;
-	src: url('../../../assets/fonts/Inter-Medium.woff2') format('woff2');
+	src: url('../../assets/fonts/Inter-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -37,7 +37,7 @@
 	font-weight: 600;
 	font-style:  normal;
 	font-display: swap;
-	src: url('../../../assets/fonts/Inter-SemiBold.woff2') format('woff2');
+	src: url('../../assets/fonts/Inter-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -45,7 +45,7 @@
 	font-weight: 700;
 	font-style:  normal;
 	font-display: swap;
-	src: url('../../../assets/fonts/Inter-Bold.woff2') format('woff2');
+	src: url('../../assets/fonts/Inter-Bold.woff2') format('woff2');
 }
 
 /* ==========================================================================
